[package]
edition = "2021"
name = "lmdb-js-safe"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
heed = "0.20.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio"] }
napi-derive = "2.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
