[package]
edition = "2021"
name = "lmdb-js-lite"
version = "0.0.0"

[[bench]]
name = "lmdb_js_safe_benchmark"
harness = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.86"
crossbeam = "0.8.4"
heed = "0.20.3"
napi = { version = "3.0.0-alpha.8", default-features = false, features = ["napi4", "tokio"] }
napi-derive = "3.0.0-alpha.7"
thiserror = "1.0.63"
tracing = "0.1.40"
tokio = "1.39.2"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
debug = 1
# strip = "symbols"
